--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 name: Kwiki-Autoformat
-version: 0.02
+version: 0.03
 abstract: Autoformat preformatted forms of text
 author: Ian Langworth <langworth.com>
 license: perl
@@ -7,8 +7,9 @@ distribution_type: module
 requires:
   perl: 5.6.1
   Kwiki: 0.30
-  Text::Autoformat: 0
+  Text::Autoformat: 1.12
+  Spiffy: 0.22
 no_index:
   directory:
     - inc
-generated_by: Module::Install version 0.33
+generated_by: Module::Install version 0.39
